global-styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:ital,wght@1,600&family=Playfair+Display:ital,wght@1,500&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    color: black;
    font-family: "Lato", sans-serif;
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
}

hr {
    border: 0;
    background: linear-gradient(90deg, #ff6ec4, #7873f5);
    height: 5px;
}

.header-text {
    text-align: center;
    padding: 20px;
    margin: 10px 0;
    background: linear-gradient(90deg, #ff6ec4, #7873f5);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: "Playfair Display", serif;
}

em:hover {
    background: linear-gradient(90deg, #ff6ec4, #7873f5);
}

.head-text {
    font-family: "Montserrat", sans-serif;
}

/* Hero Section */

.hero_section {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 50px 0;
}

.card-group,
.card {
    aspect-ratio: 5 / 7;
}

.card-group,
.big-card {
    width: 25vmin;
}

.card {
    position: absolute;
    transition: transform 800ms cubic-bezier(.05, .43, .25, .95);
}

.big-card {
    width: 25vmin;
    border-radius: 1vmin;
}

.big-card:nth-child(4) {
    background-image: url("./img/bild_1.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: translateX(-10%) rotate(-1deg);
}

.big-card:nth-child(2) {
    background-image: url("./img/bild_2.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: rotate(2deg);
}

.big-card:nth-child(3) {
    background-image: url("./img/bild_3.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: translateX(-6%) rotate(-3deg);
}

.big-card:nth-child(1) {
    background-image: url("./img/bild_4.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: translate(-10%, 3%) rotate(5deg);
}

.card-group:hover>.big-card:nth-child(4) {
    background-image: url("./img/bild_1.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: translate(-100%, 16%) rotate(-24deg);
}

.card-group:hover>.big-card:nth-child(2) {
    background-image: url("./img/bild_2.webp");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom;
    transform: translate(-30%, 0%) rotate(-8deg);
}

.card-group:hover>.big-card:nth-child(3) {
    background-image: url("./img/bild_3.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: translate(50%, 0%) rotate(8deg);
}

.card-group:hover>.big-card:nth-child(1) {
    background-image: url("./img/bild_6.webp");
    background-repeat: no-repeat;
    background-size: cover;
    transform: translate(100%, 16%) rotate(24deg);
}

.introduction {
    margin-top: 10%;
    text-align: center;
}

.animated-text {
    font-size: x-large;
    font-weight: bold;
    background: linear-gradient(90deg, #ff6ec4, #7873f5);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: text-animation 20s ease-in-out infinite;
}

.animated-subtext {
    font-size: 1.5em;
    font-weight: normal;
    color: #333;
    opacity: 0;
    animation: subtext-animation 2s ease-in-out forwards 2s;
}

@keyframes subtext-animation {
    0% {
        opacity: 0;
        transform: translateY(20px);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

/* Skills */

.skills {
    background-color: #A2D2FF;
}

.skill-names {
    display: grid;
    grid-template-columns: auto auto;
    justify-items: center;
    gap: 10px;
    margin: 10px;
}

.skill-names img {
    width: 100px;
    height: 100px;
}

figure {
    box-shadow: -5px 5px 0px 0px;
}

figure:hover {
    box-shadow: -5px 5px 5px 10px;
}

figcaption {
    text-align: center;
}

/* About Me */

.about_me_content {
    flex: 1;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
}

.about_me_text h2 {
    text-align: center;
    margin-bottom: 5px;
}

.about_me_text {
    width: 100%;
    padding: 30px;
    font-size: larger;
}

.img_self {
    width: 100%;
    height: auto;
    margin: 10px;
    box-shadow: 1em .4em 5px #bde0fe, -1em -.3em 5px #ffafcc;
}

.email {
    text-align: center;
}

.email:hover {
    text-decoration-line: underline;
    text-decoration-style: wavy;
}

/* Projects */

#projects {
    background-color: #A2D2FF;
}

.project {
    display: flex;
    flex-direction: column;
}

.project img {
    width: 100%;
    height: auto;
}

.project div {
    padding: 10px;
    text-align: center;
}

.link-grp {
    display: flex;
    flex-direction: column;
    margin: 20px auto;
    width: 30%;
    min-width: 300px;
    max-width: 500px;
}

.btn-link {
    background-color: #cdb4db;
    padding: 10px;
    border-radius: 2px;
    box-shadow: 0 0 10px 2px;
    margin: 10px;
}

.btn-link:hover {
    background-color: #ffafcc;
}

/* Footer */

footer {
    flex-shrink: 0;
}

.footer-content {
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}

.footer-icons {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.footer-icons a {
    margin: 10px;
}

.email {
    margin: 10px;
}


/* Media Queries */
@media (min-width: 768px) {
    .logo {
        max-width: 130px;
    }

    nav ul {
        display: flex;
    }

    .about_me_content {
        flex-direction: row;
    }

    .about_me_text {
        width: 50%;
        padding: 50px;
        font-size: smaller;
    }

    .img_self {
        width: 50%;
    }

    .animated-text {
        font-size: xx-large;
    }

    .footer-content {
        flex-direction: row;
        justify-content: space-between;
        text-align: left;
        font-size: larger;
    }

    .footer-content>div {
        flex: 1;
    }

    .footer-icons a {
        margin: 10px;
    }

    h3 {
        text-align: center;
    }

    .skill-names {
        display: grid;
        grid-template-columns: auto auto auto;
    }

    .project img {
        padding: 20px;
    }
}

@media (min-width: 1024px) {
    .logo {
        max-width: 170px;
    }

    .about_me_text {
        font-size: medium;
    }

    .footer-content {
        font-size: x-large;
    }

    .project div {
        font-size: large;
    }

}

@media (min-width: 1440px) {
    .logo {
        max-width: 200px;
    }

    .about_me_text {
        font-size: x-large;
    }

    .footer-content {
        font-size: xx-large;
    }

    .project div {
        font-size: x-large;
    }
}

@media (min-width: 2560px) {
    .logo {
        max-width: 230px;
    }

    .animated-text,
    .animated-subtext {
        font-size: xxx-large;
    }

    .about_me_text {
        font-size: xx-large;
    }

    .footer-content {
        font-size: xxx-large;
    }

    .project div {
        font-size: xxx-large;
    }
}

